--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,12 @@
-ALLOWED_HOSTS=
-DEBUG=
 SECRET_KEY=
+DEBUG=
+ALLOWED_HOSTS=
+
 TELEGRAM_BOT_TOKEN=
+
+DB_NAME=
+DB_USER=
+DB_PASSWORD=
+DB_HOST=
+DB_PORT=
+
