--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ drf-spectacular-sidecar==2025.8.1
 inflection==0.5.1
 jsonschema==4.25.1
 jsonschema-specifications==2025.4.1
+psycopg2-binary==2.9.10
 PyJWT==2.10.1
 python-decouple==3.8
 PyYAML==6.0.2
